<resources>
    <string name="appName">Playlist Maker</string>
    <string name="search">Поиск</string>
    <string name="library">Медиатека</string>
    <string name="settings">Настройки</string>
    <string name="darkTheme">Темная тема</string>
    <string name="shareApp">Поделиться приложением</string>
    <string name="writeSupport">Написать в поддержку</string>
    <string name="terms">Пользовательское соглашение</string>
    <string name="shareLink" translatable="false">https://practicum.yandex.ru/android-developer/</string>
    <string name="termsLink" translatable="false">https://yandex.ru/legal/practicum_offer/</string>
    <string name="supportEmailAddress" translatable="false">arkhipov-media@yandex.ru</string>
    <string name="supportMailSubject">Сообщение разработчикам и разработчицам приложения Playlist Maker</string>
    <string name="supportMailText">Спасибо разработчикам и разработчицам за крутое приложение!</string>
    <string name="noFoundResults">Ничего не нашлось</string>
    <string name="connectionProblem">Проблемы со связью</string>
    <string name="uploadFailed">Загрузка не удалась. Проверьте подключение к интернету</string>
    <string name="refresh">Обновить</string>
    <string name="something_went_wrong">Что-то пошло не так</string>
    <string name="you_found">Вы искали</string>
    <string name="clear_history">Очистить историю</string>
    <string name="duration">Длительность</string>
    <string name="album">Альбом</string>
    <string name="year">Год</string>
    <string name="genre">Жанр</string>
    <string name="country">Страна</string>
</resources>