<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/primaryMarginPaddingSize"
    android:theme="@style/Theme.PlaylistMaker.theme">

    <android.widget.Toolbar
        android:id="@+id/toolBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:navigationIcon="@drawable/ic_arrow_back"
        android:title="@string/settings"
        android:titleTextAppearance="@style/customToolbar" />

    <FrameLayout
        style="@style/settingsItem"
        android:layout_marginTop="40dp">

        <TextView
            style="@style/p.theme.settingsStartItem"
            android:text="@string/darkTheme" />

        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/swTheme"
            style="@style/icon.settingsEndItem.theme"
            android:layout_width="wrap_content"
            android:layout_height="24dp" />
    </FrameLayout>

    <FrameLayout style="@style/settingsItem">

        <TextView
            style="@style/p.theme.settingsStartItem"
            android:text="@string/shareApp" />

        <ImageView
            android:id="@+id/iwShareApp"
            style="@style/icon.settingsEndItem.theme"
            android:src="@drawable/ic_share" />
    </FrameLayout>

    <FrameLayout style="@style/settingsItem">

        <TextView
            style="@style/p.theme.settingsStartItem"
            android:text="@string/writeSupport" />

        <ImageView
            android:id="@+id/iwWriteSupport"
            style="@style/icon.settingsEndItem.theme"
            android:src="@drawable/ic_support" />
    </FrameLayout>

    <FrameLayout style="@style/settingsItem">

        <TextView
            style="@style/p.theme.settingsStartItem"
            android:text="@string/terms" />

        <ImageView
            android:id="@+id/iwTerms"
            style="@style/icon.settingsEndItem.theme"
            android:baselineAlignBottom="false"
            android:src="@drawable/ic_arrow_forward" />
    </FrameLayout>
</LinearLayout>