<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginBottom="@dimen/secondaryMarginPaddingSize"
    android:orientation="vertical"
    android:padding="@dimen/primaryMarginPaddingSize"
    android:theme="@style/Theme.PlaylistMaker">

    <TextView
        android:id="@+id/logoTitle"
        style="@style/h1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="40dp"
        android:text="@string/appName"
        android:textColor="@color/white" />

    <Button
        android:id="@+id/btnSearch"
        style="@style/btn.mainActivity"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:text="@string/search"
        app:icon="@drawable/ic_search" />

    <Button
        android:id="@+id/btnLibrary"
        style="@style/btn.mainActivity"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:layout_weight="1"

        android:text="@string/library"
        app:icon="@drawable/ic_library" />

    <Button
        android:id="@+id/btnSettings"
        style="@style/btn.mainActivity"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:text="@string/settings"
        app:icon="@drawable/ic_settings" />

</LinearLayout>